<resources>
    <string name="app_name">RU Cafe Android</string>
    <string name="menu_header">RU Donuts</string>
    <string name="donuts_title">DONUTS</string>
    <string name="coffee_title">COFFEE</string>
    <string name="sandwiches_title">SAND\nWICHES</string>
    <string name="orders_title">ORDERS</string>
    <string name="current_order_title">CURRENT ORDER</string>
    <string name="past_order_title">PAST ORDERS</string>

    <string name="quantity">Quantity:</string>
    <string name="total">Total:</string>
    <string name="default_sum">$0.00</string>
    <string name="add_to_order">Add to Order</string>
    <string name="order_breakdown">Order</string>

    <string name="coffee_header">Coffee</string>
    <string name="coffee_size">Size:</string>
    <string name="coffee_addins">Add-Ins:</string>
    <string name="two_milk">2% Milk</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="vanilla">Vanilla</string>
    <string name="caramel">Caramel</string>
    <string name="mocha">Mocha</string>

    <string name="sandwiches_header">Sandwiches</string>
    <string name="sandwiches_protein">Protein:</string>
    <string name="sandwiches_bread">Bread:</string>
    <string name="sandwiches_addons">Add-Ons:</string>
    <string name="lettuce">Lettuce</string>
    <string name="tomato">Tomato</string>
    <string name="onion">Onion</string>
    <string name="cheese">Cheese</string>

    <string name="donuts_header">Donuts</string>
    <string name="donut_type">Type and Flavor:</string>

    <string name="orders_header">Orders</string>
    <string name="current_order">Current Order</string>
    <string name="past_orders">Past Orders</string>
    <string name="subtotal">Subtotal:</string>
    <string name="sales_tax">Sales Tax:</string>
    <string name="remove_selected">Remove selected</string>
    <string name="place_order">Place order</string>
    <string name="order_number">Order Number:</string>
    <string name="cancel_order">Cancel order</string>

</resources>