<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="add">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:background="@color/coffee_header"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/coffeeText"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:fontFamily="@font/bodoni_72_book"
            android:text="@string/coffee_header"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="72sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="86dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/coffee_header_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="726dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="2dp">

        <LinearLayout
            android:id="@+id/coffeeSize"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/coffeeSizeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/bodoni_72_book"
                android:text="@string/coffee_size"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/coffeeSizeSpinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="2.5"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/coffeeAddInsTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/bodoni_72_book"
                android:text="@string/coffee_addins"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <CheckBox
                    android:id="@+id/twoMilk"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/bodoni_72_book"
                    android:text="@string/two_milk"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/mocha"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/bodoni_72_book"
                    android:text="@string/mocha"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <CheckBox
                    android:id="@+id/vanilla"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:fontFamily="@font/bodoni_72_book"
                    android:text="@string/vanilla"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/caramel"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/bodoni_72_book"
                    android:text="@string/caramel"
                    android:textSize="20sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/whippedCream"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/bodoni_72_book"
                android:text="@string/whipped_cream"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/coffeeQuantityTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/bodoni_72_book"
                android:text="@string/quantity"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/coffeeQuantitySpinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1.5"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/coffeeBreakdown"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/text_view_border"
                android:fontFamily="@font/geneva"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:text="TextView"
                android:textAlignment="viewStart" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:gravity="center|top"
            android:orientation="vertical"
            android:paddingBottom="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/coffeeTotalTxt"
                    android:layout_width="18dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_weight="0.25"
                    android:fontFamily="@font/bodoni_72_book"
                    android:text="@string/total"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/coffeeTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="0.75"
                    android:background="@drawable/text_view_border"
                    android:fontFamily="@font/geneva"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/default_sum"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/coffeeAddOrder"
                android:layout_width="394dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/order_button"
                android:fontFamily="@font/bodoni_72_book"
                android:onClick="coffeeAddOrder"
                android:text="@string/add_to_order"
                android:textSize="26sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>