<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="add">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:background="@color/sandwiches_header"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/sandwichText"
            android:layout_width="213dp"
            android:layout_height="93dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/bodoni_72_book"
            android:includeFontPadding="false"
            android:text="@string/sandwiches_header"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="68sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="7dp"
            android:layout_height="73dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sandwiches_header_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/proteinLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/sandwichesProteinTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/bodoni_72_book"
            android:text="@string/sandwiches_protein"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/sandwichesProteinSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="2.5"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/breadLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="216dp"
        app:layout_constraintTop_toBottomOf="@id/proteinLayout">

        <TextView
            android:id="@+id/sandwichesBreadTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/bodoni_72_book"
            android:text="@string/sandwiches_bread"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/sandwichesBreadSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="2.5"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sandwichesAddOnsLayout"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/breadLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/sandwichesAddOnsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/bodoni_72_book"
            android:text="@string/sandwiches_addons"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/firstAddOns">

            <CheckBox
                android:id="@+id/lettuce"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/bodoni_72_book"
                android:text="@string/lettuce"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/tomato"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/bodoni_72_book"
                android:text="@string/tomato"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/secondAddOns"
            android:layout_height="70dp">


            <CheckBox
                android:id="@+id/onion"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/bodoni_72_book"
                android:text="@string/onion"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cheese"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/bodoni_72_book"
                android:text="@string/cheese"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical"
            android:paddingBottom="12dp">

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sandwichesQuantityLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/sandwichesAddOnsLayout">

        <TextView
            android:id="@+id/sandwichesQuantityTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/bodoni_72_book"
            android:text="@string/quantity"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/sandwichesQuantitySpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1.5"
            android:spinnerMode="dropdown" />

    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sandwichesQuantityLayout"
        android:id="@+id/sandwichesBreakdownLayout">


        <TextView
            android:id="@+id/sandwichesBreakdown"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/text_view_border"
            android:fontFamily="@font/geneva"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:text="@string/order_breakdown"
            android:textAlignment="viewStart" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/sandwichesBreakdownLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sandwichesTotalTxt"
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="0.25"
                android:fontFamily="@font/bodoni_72_book"
                android:text="@string/total"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/sandwichesTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_weight="0.75"
                android:background="@drawable/text_view_border"
                android:fontFamily="@font/geneva"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/default_sum"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/sandwichesAddOrder"
            android:layout_width="394dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/order_button"
            android:fontFamily="@font/bodoni_72_book"
            android:onClick="sandwichesAddOrder"
            android:text="@string/add_to_order"
            android:textSize="26sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>