<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/currOHeader"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:background="@color/orders_header"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/currOTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/bodoni_72_book"
            android:includeFontPadding="true"
            android:text="@string/current_order"
            android:textColor="@color/white"
            android:textSize="56sp" />

        <ImageView
            android:id="@+id/currOIcon"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:cropToPadding="false"
            app:srcCompat="@drawable/orders_header_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/currentOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/currOHeader">

        <ListView
            android:id="@+id/currentOrderBreakdown"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="match_parent"
            android:layout_height="487dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_view_border"
            android:fontFamily="@font/geneva"
            android:paddingStart="8dp"
            android:paddingTop="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:fontFamily="@font/bodoni_72_book"
                    android:text="@string/subtotal"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/currentOrderSubtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:layout_marginLeft="12dp"
                    android:background="@drawable/text_view_border"
                    android:fontFamily="@font/geneva"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/default_sum"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="30dp">

                <TextView
                    android:id="@+id/currentOrderSalesTaxTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:fontFamily="@font/bodoni_72_book"
                    android:text="@string/sales_tax"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/currentOrderSalesTax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:background="@drawable/text_view_border"
                    android:fontFamily="@font/geneva"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/default_sum"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentOrderTotalTxt"
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="0.25"
                android:fontFamily="@font/bodoni_72_book"
                android:text="@string/total"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/currentOrderTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_weight="0.75"
                android:background="@drawable/text_view_border"
                android:fontFamily="@font/geneva"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/default_sum"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center|top">

            <Button
                android:id="@+id/ordersRemSelected"
                android:layout_width="180dp"
                android:layout_height="54dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/orders_header"
                android:fontFamily="@font/bodoni_72_book"
                android:onClick="removeOrderItem"
                android:text="@string/remove_selected"
                android:textSize="20sp" />

            <Button
                android:id="@+id/ordersPlaceOrder"
                android:layout_width="180dp"
                android:layout_height="54dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/orders_header"
                android:fontFamily="@font/bodoni_72_book"
                android:onClick="placeOrder"
                android:text="@string/place_order"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>